create MyAdvancedCSS and My AdvancedCSS2

--- a/MyBasicCss/index.html
+++ b/MyBasicCss/index.html
@@ -7,11 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section>
-    <h1>ドットインストール</h1>
-    <p>こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！</p>
-    <p>こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！</p>
-  </section>
-
+  <h1>ドットインストール</h1>
+  <img src="">
 </body>
 </html>
